# franklin_client

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/franklin_client/: __init__.py  auth.py  cli.py  utils.py
tests/: conftest.py  test_franklin.py  test_utils.py
