[project]
name = "Franklin_Client"
version = "0.0.0"
description = "Python package for Franklin API"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
  { name="Robert Ernst", email="R.F.Ernst-3@umcutrecht.nl" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://github.com/UMCUGenetics/franklin_client"
Issues = "https://github.com/UMCUGenetics/franklin_client/issues"

[tool.pytest.ini_options]
pythonpath = "src/"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}